# CyberRecon

./: .gitignore  BRANCHING.md  CHANGELOG_v1.4.md  CyberReconSuite_Installer_Script.iss  CyberReconSuite_Interactive_Roadmap.html  CyberReconSuite_Signature_Example.sig  CyberReconSuite_v1.3_RC.AppImage  CyberReconSuite_v1.3_Signature_Hash_Manifest.txt  InnoSetupScript.iss  Interactive_Roadmap.html  MERGE_CHECKLIST.md  README.md  README_CyberReconSuite_v1.3_RC.md  RELEASE_PLAN_v1.4.md  Release_Manifest.txt  main_launcher.py  pyproject.toml  requirements.txt  run.py  setup.cfg  sign_linux_appimage.sh  sign_windows_exe.bat
CyberReconSuite_v1_4/: README.md
CyberReconSuite_v1_4/docs/: DEPENDENCIES.txt  Dependencies_and_Links.md
addons/modules/: cloud.py  compliance.py  dashboard.py  dlp.py  edr.py  firewall.py  forensics.py  netconfig.py  pentest.py  settings.py  siem.py  snort_log_viewer.py  soar.py  threatintel.py  tshark_viewer.py  vulnmgmt.py
addons/nmap_module/: README.md  nmap_integration.py
app/: main.py
app/modules/: advanced_tools.py  bluetooth_scanner.py  updater.py  wifi_scanner.py
assets/: README.md  style.qss
config/: README.md  logging.ini  settings.json
data/: README.md
docs/: Dependencies_and_Links.md  README.md
lib/: README.md
logs/: README.md
scripts/: README.md
src/: README.md  cloud_connector.py  compliance_module.py  compliance_tab_open_csv.py  dashboard.py  dashboard_builder.py  dlp_module.py  edr_module.py  main.py  pentest_tools.py  siem_module.py  soar_module.py  threatintel_module.py
tests/: README.md
updates/: README.md
(+25 files in other folders)
